# docTR-Labeling

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/schemas/: annotation.py  ls.py  prediction.py  response.py
app/services/: doctr.py
scripts/: docTRLabeler.py
