[project]
name = "doctr-labeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-doctr>=1.0.0",
    "python-multipart>=0.0.20",
    "torch>=2.5.1",
    "torchvision>=0.22.1",
    "uvicorn>=0.35.0",
]
